--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "em-ui",
-  "version": "1.0.0",
-  "description": "=== #### 1. 概述 > 为了学习移动UI而创建的项目，模仿`bootstrapt`和`WeUI`",
-  "main": "index.js",
+  "name": "@followwinter/em-ui",
+  "version": "1.0.2",
+  "description": " 为了学习移动UI而创建的项目，模仿`bootstrapt`和`WeUI`",
+  "main": "index.scss",
   "directories": {
     "doc": "doc",
     "example": "example"
