--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@followwinter/em-ui",
-  "version": "1.0.13",
+  "version": "1.0.15",
   "description": " 为了学习移动UI而创建的项目，模仿`bootstrapt`和`WeUI`",
   "main": "index.scss",
   "directories": {
@@ -10,8 +10,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "gulp watch",
-    "build":"gulp build",
-    "pub":"npm publish --access=public"
+    "build": "gulp build",
+    "pub": "gulp build &&gulp bump  && npm publish --access=public"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,7 @@
     "browser-sync": "^2.9.11",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
+    "gulp-bump": "^2.5.1",
     "gulp-livereload": "^3.8.1",
     "gulp-minify-css": "^1.2.4",
     "gulp-rename": "^1.2.2",
