修改入口名称和分支名称

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: Follow Winter
 author: Follow Winter
-baseurl: /herring-cove
+baseurl: /em-ui
 description: 一个简单的移动端css框架
 github: https://github.com/followWinter/em-ui
 email: lyxxxx05@gmail.com
