--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@followwinter/em-ui",
-  "version": "2.0.11",
+  "name": "em-ui",
+  "version": "2.0.12",
   "description": " 为了学习移动UI而创建的项目，模仿`bootstrapt`和`WeUI`",
   "main": "./dist/emui.min.css",
   "directories": {
